--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -1,24 +1,32 @@
 .gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 12px;
-    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 4px;
+    justify-content: center;
+    row-gap: 4px;
+
 }
 
-.imageCard {
+.galleryCard {
+    margin-top: 40px;
+    width: 280px;
+    height: 220px;
+    border: solid #808080 1px;
     overflow: hidden;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: transform 0.3s ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.galleryCard:hover {
+    transform: scale(1.1);
 }
 
 .galleryImg {
+    display: block;
     width: 100%;
-    height: auto;
-    border-radius: 10px;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: cover;
-}
-
-.imageCard:hover {
-    transform: scale(1.05);
 }
