--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -11,27 +11,51 @@
 }
 
 .modalContent {
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    position: relative;
-    max-width: 80%;
+    background: rgba(0, 0, 0, 0.6);
+    width: 1100px;
+    /* Фіксована ширина */
+    height: 900px;
+    /* Фіксована висота */
+    max-width: 90vw;
+    max-height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    /* Прибираємо зайві відступи */
+    overflow: hidden;
+    border: none;
+    box-shadow: none;
 }
 
 .modalContentImg {
-    max-width: 100%;
-    height: auto;
-    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .closeBtn {
     position: absolute;
     top: 10px;
     right: 10px;
-    background: transparent;
+    background: rgba(0, 0, 0, 0.6);
+    color: white;
     border: none;
     font-size: 20px;
     cursor: pointer;
-    color: red;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+.textInfo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-left: 0%;
+}
+
+.imageInfo {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
 }
