--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,22 +1,66 @@
 .searchBar {
+    width: 100%;
+    max-width: 1600px;
+    height: 60px;
     background-color: #3f51b5;
-    /* Синій фон */
-    padding: 20px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    box-sizing: border-box;
 }
 
 .searchForm {
-    display: flex;
-    width: 50%;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 24px;
 }
 
 .searchInput {
-    width: 100%;
-    padding: 10px 15px;
-    font-size: 18px;
-    border: none;
-    border-radius: 25px;
+    width: 400px;
+    height: 40px;
+    margin-top: 20px;
+    padding-left: 26px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.04em;
+    color: #808080;
+    border-radius: 6px;
+    border-color: #808080;
+    border-width: 1px;
+}
+
+.searchInput:hover {
+    border-color: #000000;
+}
+
+.searchInput:focus {
+    border-color: #4e75ff;
     outline: none;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.searchBtn {
+    width: 91px;
+    height: 44px;
+    text-align: center;
+    background-color: #4e75ff;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.04em;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    margin-left: 12px;
+    margin-top: 24px;
+}
+
+.searchBtn:hover {
+    background-color: #6c8cff;
 }
